# biolearn

./: .coveragerc  .env.example  .flake8  .gitignore  AUTHORS.rst  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Untitled.ipynb  github  github.pub  pyproject.toml
.binder/: postBuild  requirements.txt  runtime.txt
.github/workflows/: main.yml  sync_notion.yml
.trunk/: actions  logs  notifications  out  tools
bioenv/: pyvenv.cfg
biolearn/: __init__.py  cache.py  calc_clock.py  cli.py  clock.py  clock_gallery.py  corrections.py  data_library.py  defaults.py  dunedin_pace.py  hematology.py  imputation.py  load.py  metadata.py  model.py  model_gallery.py  mortality.py  other_biomarkers.py  util.py  visualize.py
biolearn/_utils/: __init__.py  docs.py
biolearn/clinical/: __init__.py  convert.py  registry.py
biolearn/clock_tb/: BMI.csv  DNAmClockCortical.csv  HRSInCHPhenoAge.csv  Hannum.csv  Horvath1.csv  Horvath2.csv  LeeRefinedRobust.csv  LeeRobust.csv  Mayne.csv  MiAge.csv  PEDBE.csv  PhenoAge.csv  Zhang_10.csv
biolearn/data/: 450K_reinius_12_reference.csv  AD_Bahado-Singh.csv  Alcohol.csv  AltumAge.csv  AltumAge.pt  BMI_McCartney.csv  BMI_Reed.csv  Bocklandt.csv  BodyFatMcCartney.csv  Bohlin.csv  CVD_Westermann.csv  DNAmTL.csv  DepressionBarbu.csv  Dunedin.tsv  DunedinPACE.csv  DunedinPACE.tsv  DunedinPACE_Gold_Means.csv  DunedinPACE_Means.csv  DunedinPoAm38.csv  EPIC_salas_18_reference.csv  EducationMcCartney.csv  EpiTOC1.csv  EpiTOC2.csv  Garagnani.csv  Garagnani_CpG.csv  GrimAgeV1.csv  GrimAgeV2.csv  HDLCholesterolMcCartney.csv  HRSInCHPhenoAge.csv  Hannum2013.tsv  HepatoXu.csv  Horvath2013.tsv  Hurdle_CpGs.csv  Hurdle_CpGs.csv.example  Knight.csv  LDLCholesterolMcCartney.csv  LeeControl.csv  LeeRefinedRobust.csv  LeeRobust.csv  Lin.csv  (+35 more)
biolearn/data/reference/: alamar_reference.csv  challenge_id_map.csv  (+3 more)
biolearn/stuff/: __init__.py  stuff.py
biolearn/test/: generate.py  test_autoscan_geo_matrix_parser.py  test_cache.py  test_clinical_layer.py  test_clock.py  test_clock_gallery.py  test_custom_geo_matrix_parser.py  test_data_library.py  test_geodata.py  test_grimage_missing_metadata.py  test_hurdle_model.py  test_imputation.py  test_load.py  test_model.py  test_model_gallery.py  test_other_biomarkers.py  test_registry.py  test_required_features.py
biolearn/tests/: test_init.py
doc/: Makefile  README  clocks.rst  conf.py  data.rst  generate.py  hurdle_api_guide.md  index.rst  introduction.rst  make.bat  metadata_standard.rst  methylation-standard.rst  model-usage.rst  quickstart.md  references.bib  roadmap.rst  sg_execution_times.rst  soft_references.bib  tune_toc.rst  user_guide.rst
doc/binder/: requirements.txt
doc/changes/: names.rst
doc/includes/: big_toc_css.rst  bigger_toc_css.rst
doc/modules/: cache.rst  clock.rst  data_library.rst  imputation.rst  index.rst  load.rst  model_gallery.rst  mortality.rst  stuff.rst
doc/sphinxext/: gh_substitutions.py  github_link.py
doc/stuff/: index.rst  stuff_intro.rst
doc/templates/: class.rst  function.rst
doc/themes/: custom.css
docs/: hurdle_api_guide.md
examples/: README.txt  hurdle_api_example.py
examples/00_epigenetic_biomarkers/: README.rst  plot_custom_imputation_implementation.py  plot_down_syndrome_model.py  plot_epigenetic_clocks_on_geo.py
examples/00_nhanes/: README.rst  epigenetic_clocks_on_geo.py  plot_epigenetic_clocks_on_geo.py  plot_nhanes.py
examples/00_omics_biomarkers/: README.rst  plot_local_data_load.py  plot_transcriptomic_clock.py
examples/00_tutorials/: README.rst  plot_nhanes.py  plot_python_101.py
examples/01_Nhanes_Plot/: nhanes_plot.py
examples/01_composite_biomarkers/: README.rst  plot_nhanes.py
examples/02_challenge_submissions/: README.rst  plot_challenge_data.py  simple_competiton_submission.py  training_simple_model.py
examples/03_deconvolution/: README.rst  deconvolution_example.py  plot_blood_deconvolution.py
examples/04_additional_visualizations/: README.rst  plot_clock_model_relationships.py  plot_dnam_relationships.py  plot_quality_control.py
examples/04_custom_json_parser/: custom_json_parser.py
examples/04_quality_control/: README.rst  plot_quality_control.py
examples/05_dnam_visualizations/: README.rst  plot_dnam_relationships.py
examples/06_clock_model_visualizations/: README.rst  plot_clock_model_relationships.py
notebooks/: plot_nhanes.ipynb
scripts/: sync_library_entry_to_notion.py
tests/: test_metadata_search.py  test_metadata_standard.py  test_validate_yaml.py
(+87 files in other folders)
